Criados todos os post, get, update, de cliente e produto

--- a/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/VisualizarProduto.form
+++ b/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/VisualizarProduto.form
@@ -77,7 +77,7 @@
                   <Table columnCount="4" rowCount="4">
                     <Column editable="false" title="ID" type="java.lang.Object"/>
                     <Column editable="false" title="Descri&#xe7;&#xe3;o" type="java.lang.Object"/>
-                    <Column editable="true" title="Valor" type="java.lang.Object"/>
+                    <Column editable="false" title="Valor" type="java.lang.Object"/>
                     <Column editable="false" title="Categoria" type="java.lang.Object"/>
                   </Table>
                 </Property>
@@ -106,7 +106,7 @@
                   </TableColumnModel>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
-                  <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+                  <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                 </Property>
               </Properties>
             </Component>
