--- a/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/Retaguarda.form
+++ b/src/main/java/projeto/unipar/java_front_end_desktop_pdv/View/Retaguarda.form
@@ -124,6 +124,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="PDV"/>
+    <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+      <Color id="Default Cursor"/>
+    </Property>
     <Property name="iconImages" type="java.util.List" editor="org.netbeans.modules.form.ComponentChooserEditor">
       <ComponentRef name="null"/>
     </Property>
